[project]
name = "wallet-profit-n-loss"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
    "streamlit>=1.50.0",
]
